fix(configuration): adicionadas configurações de usuário padrão ao arquivo application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=spring_security
+
+spring.security.user.name = pedroghiotti
+spring.security.user.password = caiju
+spring.security.user.roles = USER
